css/styles.css
/* ... */
.icon-remove-circle
{
	background-position : -168px -96px;
}

.icon-ok-circle
{
	background-position : -192px -96px;
}

.icon-ban-circle
{
	background-position : -216px -96px;
}

.icon-arrow-left
{
	background-position : -240px -96px;
}

.icon-arrow-right
{
	background-position : -264px -96px;
}

.icon-arrow-up
{
	background-position : -289px -96px;
}

.icon-arrow-down
{
	background-position : -312px -96px;
}

.icon-share-alt
{
	background-position : -336px -96px;
}

.icon-resize-full
{
	background-position : -360px -96px;
}

.icon-resize-small
{
	background-position : -384px -96px;
}

.icon-plus
{
	background-position : -408px -96px;
}

.icon-minus
{
	background-position : -433px -96px;
}

.icon-asterisk
{
	background-position : -456px -96px;
}

.icon-exclamation-sign
{
	background-position : 0 -120px;
}

.icon-gift
{
	background-position : -24px -120px;
}

.icon-leaf
{
	background-position : -48px -120px;
}

.icon-fire
{
	background-position : -72px -120px;
}

.icon-eye-open
{
	background-position : -96px -120px;
}

.icon-eye-close
{
	background-position : -120px -120px;
}

.icon-warning-sign
{
	background-position : -144px -120px;
}

.icon-plane
{
	background-position : -168px -120px;
}

.icon-calendar
{
	background-position : -192px -120px;
}

.icon-random
{
	width               : 16px;
	background-position : -216px -120px;
}

.icon-comment
{
	background-position : -240px -120px;
}

.icon-magnet
{
	background-position : -264px -120px;
}

.icon-chevron-up
{
	background-position : -288px -120px;
}

.icon-chevron-down
{
	background-position : -313px -119px;
}

.icon-retweet
{
	background-position : -336px -120px;
}

.icon-shopping-cart
{
	background-position : -360px -120px;
}

.icon-folder-close
{
	width               : 16px;
	background-position : -384px -120px;
}

.icon-folder-open
{
	width               : 16px;
	background-position : -408px -120px;
}

.icon-resize-vertical
{
	background-position : -432px -119px;
}

.icon-resize-horizontal
{
	background-position : -456px -118px;
}

.icon-hdd
{
	background-position : 0 -144px;
}

.icon-bullhorn
{
	background-position : -24px -144px;
}

.icon-bell
{
	background-position : -48px -144px;
}

.icon-certificate
{
	background-position : -72px -144px;
}

.icon-thumbs-up
{
	background-position : -96px -144px;
}

.icon-thumbs-down
{
	background-position : -120px -144px;
}

.icon-hand-right
{
	background-position : -144px -144px;
}

.icon-hand-left
{
	background-position : -168px -144px;
}

.icon-hand-up
{
	background-position : -192px -144px;
}

.icon-hand-down
{
	background-position : -216px -144px;
}

.icon-circle-arrow-right
{
	background-position : -240px -144px;
}

.icon-circle-arrow-left
{
	background-position : -264px -144px;
}

.icon-circle-arrow-up
{
	background-position : -288px -144px;
}

.icon-circle-arrow-down
{
	background-position : -312px -144px;
}

.icon-globe
{
	background-position : -336px -144px;
}

.icon-wrench
{
	background-position : -360px -144px;
}

.icon-tasks
{
	background-position : -384px -144px;
}

.icon-filter
{
	background-position : -408px -144px;
}

.icon-briefcase
{
	background-position : -432px -144px;
}

.icon-fullscreen
{
	background-position : -456px -144px;
}

.form-table td
{
	vertical-align : top;
}

.form-label
{
	text-align    : right;
	padding-right : 14px;
	height : 42px;
	float: left;
	width : 160px;
	padding-top: 4px;
}

.form-value
{
	float: left;
}

.form-row
{
	clear: both;
}

td.table-row-operation
{
	padding-top: 9px;
}

input.table-row-value
{
	width: 150px;
	margin: 0px;
}

.sub-table
{
	margin-bottom: 3px;
}

.sub-table td
{
	border: none;
}

.form-table-value-subtable
{
	max-height: 110px;
	overflow: scroll;
	border-bottom : solid 1px #3d3d3d;
	width: 414px;
}

.datasource-list-container
{
	max-height : 180px;
	overflow   : scroll;
	border-bottom : solid 1px #3d3d3d;
}

ul.value-dropdown
{
	height     : 75px;
	position   : absolute;
	padding    : 0px;
	margin     : 0px;
	background-color : #272727;
	border           : 1px solid rgba(255, 153, 0, 0.8);
	overflow: scroll;
}

ul.value-dropdown li
{
	padding: 5px;
	cursor: pointer;
}

ul.value-dropdown li.selected
{
	background-color: rgba(255, 153, 0, 0.8);
	color: #000;
	text-shadow : none;
}

td.form-table-value > input[type="checkbox"]
{
	height: 15px;
	margin-top: 7px;
}

.table-row-operation > i
{
	cursor: pointer;
}

.action-icon
{
    cursor: pointer;
    margin: 3px 0px 3px 10px;

}

#main-logo
{
    display: block;
    margin-bottom: 20px;
}

#dash-logo
{
    display       : block;
    margin-left : 10px;
    margin-bottom: 10px;
}

.value-editor-ds
{
	color : #0088cc;
	cursor: pointer;
}

.text-button
{
	color  : #0088cc;
	cursor : pointer;
}

.text-button::before,
.text-button::after
{
	display            : inline-block;
	opacity            : 0;
	-webkit-transition : -webkit-transform 0.3s, opacity 0.2s;
	-moz-transition    : -moz-transform 0.3s, opacity 0.2s;
	transition         : transform 0.3s, opacity 0.2s;
}

.text-button::before
{
	margin-right      : 5px;
	content           : '[';
	-webkit-transform : translateX(10px);
	-moz-transform    : translateX(10px);
	transform         : translateX(10px);
}

.text-button::after
{
	margin-left       : 5px;
	content           : ']';
	-webkit-transform : translateX(-10px);
	-moz-transform    : translateX(-10px);
	transform         : translateX(-10px);
}

.text-button:hover::before,
.text-button:hover::after,
.text-button:focus::before,
.text-button:focus::after
{
	opacity           : 1;
	-webkit-transform : translateX(0px);
	-moz-transform    : translateX(0px);
	transform         : translateX(0px);
}

.setting-description
{
	font-size   : 10px;
	text-shadow : none;
	color: #6F6F6F;
	margin-bottom: 5px;
}

textarea.calculated-value-input
{
	position: absolute;
	width: 400px;
	height: 20px;
	resize : none;
	white-space : nowrap;
	overflow    : auto;
}
/* ... */

